Agrego getters setters timer

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/fermatmir/.netbeans/8.2/build.properties
+user.properties.file=/home/au6usto/.netbeans/8.2/build.properties
